fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -177,7 +177,7 @@ button:active {
   display: flex;
   align-items: center;
   justify-content: center;
-  visibility: hidden;
+  display: none;
   transition: all 300ms ease;
   opacity: 0;
   transform: translate(100%);
@@ -189,7 +189,7 @@ button:active {
 }
 
 .menu--open .menu__backdrop {
-  visibility: visible;
+  display: flex;
   opacity: 1;
   transform: translate(0);
 }
